# sitech-driver

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
common/: CMakeLists.txt
common/include/common/: consistent-assert.hpp  controller.hpp  pointing-state.hpp
fake/: CMakeLists.txt  main.cpp
fake/include/fake/: serial-port-simulator.hpp
fake/src/: main.cpp
